update tmux config

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -17,8 +17,8 @@ bind -r L resize-pane -R 5
 bind -n S-left previous-window
 bind -n S-right next-window
 
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 set -g status-position top
 set -g status-interval 1
