update tmux config

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -22,3 +22,5 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 
 set -g status-position top
 set -g status-interval 1
+
+source ~/.config/tmux/themes/solarized_osaka_dark.tmux
