update tmux config

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -17,10 +17,28 @@ bind -r L resize-pane -R 5
 bind -n S-left previous-window
 bind -n S-right next-window
 
+bind r source-file ~/.config/tmux/tmux.conf \; display "reloaded!"
+
+if-shell "uname -s | grep -q Linux" 'set -g @copy_cmd "wl-copy"'
+if-shell "uname -s | grep -q Darwin" 'set -g @copy_cmd "pbcopy"'
+
+setw -g mode-keys vi
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "#{@copy_cmd}"
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+bind -T copy-mode-vi V send -X select-line
+bind -T copy-mode-vi Escape send -X cancel
+
+
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
-set -g status-position top
+#set -g status-position top
 set -g status-interval 1
 
-source ~/.config/tmux/themes/solarized_osaka_dark.tmux
+set -g mouse on
+
+set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_window_status_style "rounded"
+
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
