--- a/dot_config/vim/dpp.toml
+++ b/dot_config/vim/dpp.toml
@@ -173,22 +173,6 @@ call ddu#custom#patch_local('filer', {
   \   },
   \ }})
 
-call ddu#custom#patch_local('test_file', {
-  \ 'ui': 'filer',
-  \ 'sources': [{'name': 'file', 'params': {}}],
-  \ 'sourceOptions': {
-  \   '_': {
-  \     'columns': ['filename'],
-  \     'matchers': ['matcher_hidden'],
-  \   },
-  \ },
-  \ 'kindOptions': {
-  \   'file': {
-  \     'defaultAction': 'open',
-  \   },
-  \ }})
-nnoremap <Leader>t <Cmd>call ddu#start({'name': 'test_file'})<Cr>
-
 autocmd FileType ddu-filer call s:ddu_filer_setting()
 
 function! s:ddu_filer_setting() abort
@@ -572,4 +556,31 @@ repo = "uga-rosa/ddu-filter-converter_devicon"
 
 [[plugins]]
 repo = "Shougo/ddu-filter-matcher_hidden"
+
+[[plugins]]
+repo = "Shougo/ddt.vim"
+hook_source = '''
+call ddt#custom#patch_global({
+  \ 'ui': 'shell',
+  \ 'uiParams': {
+  \   'shell': {
+  \     'noSaveHistoryCommands': ['history'],
+  \     'prompt': '%',
+  \     'promptPattern': '\w*% \?',
+  \   },
+  \ }})
+
+autocmd FileType ddt-shell call s:ddt_my_setting()
+function! s:ddt_my_setting() abort
+  nnoremap <buffer> <C-n> <Cmd>call ddt#ui#do_action('nextPrompt')<Cr>
+  nnoremap <buffer> <C-p> <Cmd>call ddt#ui#do_action('previousPrompt')<Cr>
+  nnoremap <buffer> <C-y> <Cmd>call ddt#ui#do_action('pastePrompt')<Cr>
+  nnoremap <buffer> <Cr> <Cmd>call ddt#ui#do_action('executeLine')<Cr>
+endfunction
+
+nnoremap <Leader>t <Cmd>call ddt#start()<Cr>
+'''
+
+[[plugins]]
+repo = "Shougo/ddt-ui-shell"
 
