--- a/dot_config/vim/dpp.toml
+++ b/dot_config/vim/dpp.toml
@@ -32,7 +32,7 @@ colorscheme catppuccin_macchiato
 repo = "Shougo/ddc.vim"
 hook_source = '''
 call ddc#custom#patch_global('ui', 'pum')
-call ddc#custom#patch_global('sources', ['around', 'lsp'])
+call ddc#custom#patch_global('sources', ['around', 'lsp', 'skkeleton'])
 
 call ddc#custom#patch_global('autoCompleteDelay', 100)
 call ddc#custom#patch_global('autoCompleteEvents', ['InsertEnter', 'TextChangedI'])
@@ -52,6 +52,14 @@ call ddc#custom#patch_global('sourceOptions', {
   \   'dup': 'keep',
   \   'isVolatile': v:true,
   \   'forceCompletionPattern': '\.\w*|:\w*|->\w*',
+  \ },
+  \ 'skkeleton': {
+  \   'mark': '[SKK]',
+  \   'matchers': [],
+  \   'sorters': [],
+  \   'converters': [],
+  \   'isVolatile': v:true,
+  \   'minAutoCompleteLength': 1,
   \ }})
 
 call ddc#custom#patch_global('sourceParams', {
@@ -210,6 +218,7 @@ function ToggleHidden()
 endfunction
 
 nnoremap <Leader>e <Cmd>call ddu#start({'name': 'filer'})<Cr>
+
 
 call ddu#custom#patch_local('buffer', {
   \ 'ui': 'ff',
@@ -584,3 +593,15 @@ nnoremap <Leader>t <Cmd>call ddt#start()<Cr>
 [[plugins]]
 repo = "Shougo/ddt-ui-shell"
 
+[[plugins]]
+repo = "vim-skk/skkeleton"
+hook_source = '''
+function! s:skkeleton_init() abort
+  call skkeleton#config({'globalDictionaries': [['~/.skk/SKK-JISYO.L', 'euc-jp']]})
+endfunction
+augroup skkeleton-initialize-pre
+  autocmd!
+  autocmd User skkeleton-initialize-pre call s:skkeleton_init()
+augroup END
+inoremap <C-j> <Plug>(skkeleton-toggle)
+'''
