--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -32,13 +32,7 @@ bind -T copy-mode-vi Escape send -X cancel
 
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
-
-#set -g status-position top
 set -g status-interval 1
+set -s escape-time 0
 
 set -g mouse on
-
-set -g @catppuccin_flavor "macchiato"
-set -g @catppuccin_window_status_style "rounded"
-
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
