--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -1,6 +1,7 @@
 unbind C-b
 set -g prefix C-a
 
+bind c new-window -c '#{pane_current_path}'
 bind \\ split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
