update vim config

--- a/dot_config/vim/dpp.toml
+++ b/dot_config/vim/dpp.toml
@@ -212,6 +212,13 @@ function ToggleHidden()
 endfunction
 
 nnoremap <Leader>e <Cmd>call ddu#start({'name': 'filer'})<Cr>
+nnoremap <Leader>E <Cmd>call ddu#start({
+  \ 'name': 'filer',
+  \ 'sourceOptions': {
+  \   'file': {
+  \     'path': expand('%:p:h'),
+  \   },
+  \ }})<Cr>
 
 
 call ddu#custom#patch_local('buffer', {
@@ -606,6 +613,15 @@ repo = "tpope/vim-commentary"
 [[plugins]]
 repo = "airblade/vim-gitgutter"
 hook = '''
+let g:gitgutter_map_keys = 0
+let g:gitgutter_terminal_reports_focus = 0
+let g:gitgutter_async = 1
+
+augroup DisableGitGutterAuto
+  autocmd!
+  autocmd User gitgutter autocmd! gitgutter
+augroup END
+
 autocmd BufWritePost * GitGutter
 '''
 
@@ -614,3 +630,21 @@ repo = "laraochan/sakura.vim"
 hook_add = '''
 colorscheme sakura
 '''
+
+[[plugins]]
+repo = "greymd/oscyank.vim"
+hook_add = '''
+xnoremap <Leader>y :<C-u>Oscyank<CR>
+'''
+
+[[plugins]]
+repo = "vim-airline/vim-airline"
+hook_add = '''
+let g:airline_theme = 'sakura'
+let g:airline_powerline_fonts = 1
+let g:airline#extensions#tabline#enabled = 1
+'''
+
+[[plugins]]
+repo = "ryanoasis/vim-devicons"
+
